--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ rust-version = "1.56.1"
 bench = false
 
 [dependencies]
-serde = { version = "1.0", optional = true, default-features = false }
+serde = { git = "https://github.com/njeans/serde.git", version = "1.0", optional = true, default-features = false }
 rayon = { version = "1.4.1", optional = true }
 
 # Internal feature, only used when building as part of rustc,
