--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ bench = false
 [build-dependencies]
 autocfg = "1"
 [dependencies]
-serde = { version = "1.0", optional = true, default-features = false }
+serde = { git = "https://github.com/njeans/serde.git", version = "1.0", optional = true, default-features = false }
 rayon = { version = "1.4.1", optional = true }
 
 # Internal feature, only used when building as part of rustc,
