--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ version = "0.11"
 default-features = false
 features = ["raw"]
 git = "https://github.com/njeans/hashbrown.git"
+branch = "version0.11.2"
 
 
 [dev-dependencies]
